--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<html data-lt-installed="true">
-    <link rel="stylesheet" href="style.css">
+<html link rel="stylesheet" href="style.css">
     <body>
       <header> 
       <div class="pont">
