--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html link rel="stylesheet" href="style.css">
+<html link rel="stylesheet" href="style.CSS">
     <body>
       <header> 
       <div class="pont">
