--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html link rel="stylesheet" href="style.CSS">
+<html data-lt-installed="true">
+    <link rel="stylesheet" href="style.css">
     <body>
       <header> 
       <div class="pont">
