--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html data-lt-installed="true">
     <body>
-      <header> 
+      <head> 
       <link rel="stylesheet" href="style.css">
       <div class="pont">
       <img src="https://github.com/Pr0stVlad/Scala-Dueyn-Jonson/blob/main/photo_5409267505949692441_x-removebg-preview%20(1).png?raw=true">
@@ -14,7 +14,7 @@
       </div>
       <div class="body-text">
       </div>
-      </header>
+      </head>
       <main>
         <h2> десерти </h2>
         <p> Смачненькі дисерти можуть стати чудовою насолодою до запашної кави. До асортименту входять: Тістечка, Макаранси, Трайфли, Зефіри та інші. Якщо вам цікаво подивитись детальніше в категорії Асортимент</p>
